--- a/Portafolio/package.json
+++ b/Portafolio/package.json
@@ -13,8 +13,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
